--- a/fibonac.html
+++ b/fibonac.html
@@ -7,6 +7,6 @@
     <title>Фібоначчі</title>
 </head>
 <body>
-    <script type="text/javascript" src="Fibonac.js"></script>
+    <script type="text/javascript" src="fibonac.js"></script>
 </body>
 </html>
